--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,33 +1,64 @@
-# Core
+# ============================================
+# Core Framework
+# ============================================
 fastapi==0.104.1
-uvicorn==0.24.0
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 python-dotenv==1.0.0
 
+# ============================================
+# Security & Authentication
+# ============================================
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+cryptography==41.0.7
+
+# ============================================
 # Database
+# ============================================
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 alembic==1.16.4
 supabase==2.3.4
 
-# Data validation
-pydantic[email]==1.10.12
+# ============================================
+# Data Validation & Serialization
+# ============================================
+pydantic[email]==2.5.0
+pydantic-settings==2.1.0
+python-dateutil==2.8.2
 
-# Async
+# ============================================
+# HTTP Client & API Integration
+# ============================================
 httpx==0.25.1
+requests==2.31.0
 
-# Logging
+# ============================================
+# Logging & Monitoring
+# ============================================
 python-json-logger==2.0.7
 
+# ============================================
 # Testing
+# ============================================
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
 pytest-env==0.8.2
+pytest-mock==3.12.0
 
-# Development
+# ============================================
+# Development Tools
+# ============================================
 black==23.11.0
 isort==5.12.0
 mypy==1.7.0
+flake8==6.1.0
+pre-commit==3.5.0
+
+# ============================================
+# Type Stubs
+# ============================================
+types-python-dateutil==2.8.19.14
+types-requests==2.31.0.10
